[gd_scene load_steps=31 format=3 uid="uid://d0iilxsiusx6u"]

[ext_resource type="Script" path="res://Scripts/ComponentScripts/character.gd" id="1_psmm1"]
[ext_resource type="Texture2D" uid="uid://d0vcp4raqeayc" path="res://Assets/Sprites/Nanny-WIP (1).png" id="2_b42tp"]
[ext_resource type="Texture2D" uid="uid://duw3a20corecr" path="res://Assets/Sprites/light.png" id="3_43nd8"]
[ext_resource type="PackedScene" uid="uid://cau5ul7kx2txy" path="res://Scenes/ComponentScenes/joytstick_v_2.tscn" id="4_qiggr"]
[ext_resource type="PackedScene" uid="uid://blra77sc4cyc7" path="res://Scenes/ComponentScenes/menu_button.tscn" id="5_3r8ga"]
[ext_resource type="PackedScene" uid="uid://ddorbemrt3yna" path="res://Scenes/ComponentScenes/joystick.tscn" id="5_gva3s"]

[sub_resource type="Animation" id="Animation_7fs2d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_pa766"]
resource_name = "WalkDown"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_ipcwa"]
resource_name = "WalkUp"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_kmwuo"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_kegeq"]
resource_name = "walk_right"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a0ejb"]
_data = {
"RESET": SubResource("Animation_7fs2d"),
"WalkDown": SubResource("Animation_pa766"),
"WalkUp": SubResource("Animation_ipcwa"),
"idle": SubResource("Animation_kmwuo"),
"walk_right": SubResource("Animation_kegeq")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qgn1x"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hc5nh"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pdl2r"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5aiwg"]
animation = &"idle"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_sprkf"]
blend_point_0/node = SubResource("AnimationNodeAnimation_qgn1x")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_hc5nh")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_pdl2r")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_5aiwg")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ubghu"]
animation = &"WalkDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vi4mt"]
animation = &"WalkUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6buu4"]
animation = &"WalkUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_syjyp"]
animation = &"WalkUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_7j6nh"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ubghu")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_vi4mt")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_6buu4")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_syjyp")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vso66"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qshwc"]
advance_mode = 2
advance_condition = &"Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_konfg"]
advance_mode = 2
advance_condition = &"Idle"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_76j00"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_sprkf")
states/Idle/position = Vector2(388, 100)
states/Start/position = Vector2(199, 100)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_7j6nh")
states/Walk/position = Vector2(589, 92)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_vso66"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_qshwc"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_konfg")]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3jylm"]
size = Vector2(7.99999, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xfqsg"]
size = Vector2(16, 8)

[sub_resource type="SystemFont" id="SystemFont_spr4v"]
subpixel_positioning = 0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qp3et"]
size = Vector2(16, 6.66667)

[node name="Character" type="CharacterBody2D"]
y_sort_enabled = true
position = Vector2(0, 1)
scale = Vector2(0.5, 0.5)
collision_layer = 11
collision_mask = 31
script = ExtResource("1_psmm1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_b42tp")
hframes = 5
vframes = 5
region_rect = Rect2(21, 21, 17, 24)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_a0ejb")
}

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(5, 5)

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_76j00")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/conditions/Idle = false
parameters/conditions/Walk = false
parameters/Idle/blend_position = Vector2(-0.428571, -0.161677)
parameters/Walk/blend_position = Vector2(0, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.38419e-07, 10)
rotation = 1.5708
shape = SubResource("RectangleShape2D_3jylm")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, 6)
scale = Vector2(0.61875, 0.56875)
energy = 0.75
blend_mode = 2
texture = ExtResource("3_43nd8")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="joystick_v2" parent="CanvasLayer" instance=ExtResource("4_qiggr")]
visible = false
position = Vector2(171, 568)
scale = Vector2(2, 2)

[node name="InteractButton" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.857031
anchor_top = 0.777778
anchor_right = 0.935156
anchor_bottom = 0.916667
grow_horizontal = 0
grow_vertical = 0
theme_type_variation = &"InteractButton"
metadata/_edit_use_anchors_ = true

[node name="InventoryButton" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.659375
anchor_top = 0.772222
anchor_right = 0.7375
anchor_bottom = 0.911111
theme_type_variation = &"InventoryButton"
metadata/_edit_use_anchors_ = true

[node name="joystick" parent="CanvasLayer" instance=ExtResource("5_gva3s")]
anchors_preset = -1
anchor_left = 0.144531
anchor_top = 0.743056
anchor_right = 0.144531
anchor_bottom = 0.743056
metadata/_edit_use_anchors_ = true

[node name="Interaction" type="Node2D" parent="."]
z_index = 1

[node name="Interaction Area" type="Area2D" parent="Interaction"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction/Interaction Area"]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_xfqsg")

[node name="Interact label" type="Label" parent="Interaction"]
offset_left = -72.0
offset_top = -56.0
offset_right = 78.0
offset_bottom = -38.0
theme_override_fonts/font = SubResource("SystemFont_spr4v")
theme_override_font_sizes/font_size = 13
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButton" parent="." instance=ExtResource("5_3r8ga")]
offset_left = 550.0
offset_top = 134.0
offset_right = 550.0
offset_bottom = 134.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 10)
scale = Vector2(1, 1.2)
shape = SubResource("RectangleShape2D_qp3et")

[connection signal="pressed" from="CanvasLayer/InteractButton" to="." method="_on_interact_button_pressed"]
[connection signal="pressed" from="CanvasLayer/InteractButton" to="." method="_on_button_pressed"]
[connection signal="area_entered" from="Interaction/Interaction Area" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="Interaction/Interaction Area" to="." method="_on_interaction_area_area_exited"]
